log
Sat 26 Aug 2023 08:26:24 PM UTC: 
 tests:  0|6
total_score: 0/70
cdca662
Sat 26 Aug 2023 09:01:26 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: expected ‘;’ before ‘nuevaLita’
   35 |       nuevaLita->tail = NULL;
      |       ^~~~~~~~~
Compilation failed
e5f38a3
Sat 26 Aug 2023 09:01:41 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3f424e5
Sat 26 Aug 2023 09:02:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e9e8ab1
Sat 26 Aug 2023 09:03:33 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:33: error: expected ‘;’ before ‘return’
   43 |       list->current = list->head
      |                                 ^
      |                                 ;
   44 |       return list->current->data;
      |       ~~~~~~                     
Compilation failed
e490c2a
Sat 26 Aug 2023 09:03:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
69f1e6a
Sat 26 Aug 2023 09:04:09 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
616bdd7
Sat 26 Aug 2023 09:04:16 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
02175bd
Sat 26 Aug 2023 09:06:30 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:33: error: expected ‘;’ before ‘}’ token
   52 |       return list->current->data
      |                                 ^
      |                                 ;
   53 |   }
      |   ~                              
Compilation failed
771374d
Sat 26 Aug 2023 09:06:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a50eeec
Sat 26 Aug 2023 09:06:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7ae8302
Sat 26 Aug 2023 09:11:09 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
c2e53d7
Sat 26 Aug 2023 09:11:54 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
4cd6fcc
Sat 26 Aug 2023 09:12:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7f67c3e
Sat 26 Aug 2023 09:12:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7ab004c
Sat 26 Aug 2023 09:16:01 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
9417b77
Sat 26 Aug 2023 09:23:21 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:9: error: unused variable ‘newNode’ [-Werror=unused-variable]
   74 |   Node *newNode = createNode(data);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac6a2fd
Sat 26 Aug 2023 09:25:57 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
40dfe88
Sat 26 Aug 2023 09:39:52 PM UTC: 
 list.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
2bbe9d9
Sat 26 Aug 2023 09:44:31 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:95:46: error: expected ‘;’ before ‘nuevoNodo’
   95 |         nuevoNodo->next = list->current->next
      |                                              ^
      |                                              ;
   96 |         nuevoNodo->prev = list->current;
      |         ~~~~~~~~~                             
Compilation failed
d6a6325
Sat 26 Aug 2023 09:44:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
6186671
Sat 26 Aug 2023 09:52:18 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 55/70
10f38f9
Sat 26 Aug 2023 09:58:48 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
c323ecb
Sat 26 Aug 2023 10:00:31 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
b7a147f
